Remove header - delegate to implementing file

--- a/template.tex
+++ b/template.tex
@@ -46,7 +46,7 @@
 % ==============================================================
 
 \def\idtag #1{
-\SetBgContents{Neil Patil (Version: #1)}
+\SetBgContents{}
 \SetBgScale{0.75}
 \SetBgAngle{0}
 \SetBgOpacity{1}
@@ -54,24 +54,6 @@
 \SetBgPosition{current page.south west}
 \SetBgHshift{4cm}
 \SetBgVshift{1.5cm}
-}
-
-\def\rheader {
-\begin{minipage}[b]{0.33333\textwidth}
-\raggedright
-{\HUGE Neil Patil}
-\end{minipage}%
-\begin{minipage}[b]{0.33333\textwidth}
-\centering
-\href{mailto:neilpatil215@gmail.com}{neilpatil$215$@gmail.com} \par
-$512$-$573$-$1063$
-\end{minipage}%
-\begin{minipage}[b]{0.33333\textwidth}
-\raggedleft
-\href{https://github.com/patil215}{github.com/patil$215$} \par
-\href{https://linkedin.com/in/patil215}{linkedin.com/in/patil$215$}
-\end{minipage}
-\vspace{8px}
 }
 
 \def\rtitle #1{
